# loop-bastard

./: .flake8  .gitignore  Cargo.toml  loop-bastard.service  main.py  requirements.txt  state.json
app/: Cargo.toml
app/src/: main.rs
app/src/loopbastard/: app.rs  clock.rs  controls.rs  display.rs  events.rs  fonts.rs  midi.rs  midi_input.rs  midi_output.rs  mod.rs  sequencer.rs  util.rs
app/src/loopbastard/views/: bank.rs  image.rs  mod.rs  root.rs  sequencer.rs  sequencer_body.rs  sequencers.rs  status_bar.rs  text.rs  texture_cache.rs  texture_store.rs  view.rs
hardware/: main.scad
lb/: app.py  controls.py  display.py  input_manager.py  output_manager.py  sequencer.py  tempo.py  util.py
ui/: Cargo.toml
ui/src/: lib.rs
