[package]
name = "loop-bastard"
version = "0.1.0"
authors = ["Eugene Pankov <john.pankov@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-utils = "0.7"
midir = "0.5"
coremidi = "0.4.0"
log = "0.4"
simple_logger = "1.6"
midi = "0.1"
types = "0.1"
lazy_static = "1.4.0"
loop_bastard_ui = { path = "../ui" }

[dependencies.sdl2]
version = "0.31"
default-features = true
features = ["ttf", "image", "unsafe_textures"]
